@@ -67,22 +67,21 @@ You may change the subtree name with the I<--subtree> option.
 Single slash as subtree name would cause host-level subtrees placed at the top
 of the datasources tree.
 
-By default, C<genddx> specifies the Torrus configuration output file
-with absolute path pointing to C<xmlconfig> subdirectory of the installation,
-with the file name <routers.xml>. You most probably will change this by
-using the C<--discout> option.
+By default, C<genddx> specifies the discovery output file as <routers.xml>,
+and it would be placed in site XML configuration directory.
+You most probably will change this by using the C<--discout> option.
 
 Examples:
 
-  ./bin/genddx --out=share/torrus/discovery/ch-langenthal.ddx \
-    --discout=share/torrus/xmlconfig/ch-langenthal.xml
+  ./bin/genddx --out=ch-langenthal.ddx \
+    --discout=ch-langenthal.xml \
     --host=192.168.34.35:Langenthal_PE1 \
     --host=192.168.34.36:Langenthal_PE2 \
     --host=192.168.34.37:Langenthal_CE_Stadtverwaltung \
     --community=blahBlah \
     --subtree=/MPLS/CH/Bern/Langenthal
 
-  ./bin/devdiscover --in=share/torrus/discovery/ch-langenthal.ddx
+  ./bin/devdiscover --in=ch-langenthal.ddx
 
 
 
@@ -99,7 +98,8 @@ Examples:
 This utility performs the SNMP discovery of devices listed in the input
 XML file. The output XML file is the Torrus datasources configuration.
 Output file name is taken from C<output-file> parameter in the instructions
-XML file.
+XML file. If the output file is not an absolute path, the file is placed
+in the site XML configuration directory.
 
 C<devdiscover> is accompanied by a number of MIB- or vendor-specific
 modules, each responsible for finding specific SNMP variables in
@@ -158,7 +158,7 @@ Example:
       <param name="data-dir" value="/var/snmpcollector"/>
       <param name="domain-name" value=""/>
       <param name="host-subtree" value="/Routers"/>
-      <param name="output-file" value="share/torrus/xmlconfig/myrouters.xml"/>
+      <param name="output-file" value="myrouters.xml"/>
       <param name="rrd-hwpredict" value="no"/>
       <param name="snmp-community" value="blahblah"/>
       <param name="snmp-port" value="161"/>
@@ -233,16 +233,14 @@ template in F<snmp-defs.xml>.
 =item * C<output-file>
 
 Mandatory. Specifies the output filename for generated Torrus configuration.
-In the parameter value, C<$XMLCONFIG> is replaced with the default Torrus XML
-configuration directory name.
+If no absolute path given, the default site XML configuration directory
+is used.
 
 =item * C<output-bundle>
 
 Optional. Specifies a comma-separated list of XML file names for bundle
 output. Each bundle file will contain E<lt>includeE<gt> statement for each
 corresponding C<output-file>.
-In the parameter value, C<$XMLCONFIG> is replaced with the default Torrus XML
-configuration directory name.
 
 =item * C<snmp-port>, C<snmp-community>,  C<snmp-version>, C<snmp-timeout>,
         C<snmp-retries>, C<snmp-host>
