@@ -1,3 +1,9 @@
+2004-12-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* bin/devdiscover.in (absXmlFilename): output file is placed in
+	siteXmlDir if the path is not absolute. $XMLCONFIG is still
+	supported for the sake of compatibility.
+
 2004-12-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* configure.ac: replaced --disable-modcheck with --enable-pkgonly
